# workshop-solana-lottery

./: Anchor.toml  README.md  package.json
app/: index.html  package.json  vite.config.ts
app/src/: App.css  App.tsx  CivicPassContext.tsx  LotteryContext.tsx  main.tsx
app/src/lib/: LotteryClient.ts
app/src/lib/types/: workshop_solana_lottery.ts
programs/workshop-solana-lottery/: Cargo.toml
programs/workshop-solana-lottery/src/: lib.rs
